--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -6,3 +6,5 @@
 <% @feeds.each do |feed| %>
   <p><%= feed.name %></p>
 <% end %>
+
+<iframe src="https://www.google.com/calendar/embed?src=nifjrov7sa4bis7qqo7f5e3q44%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
